I do too much code and fix

--- a/web/css/hello.css
+++ b/web/css/hello.css
@@ -5,7 +5,8 @@
  *, *:before, *:after{
      box-sizing: inherit;
  }
- p{
+
+body{
      -webkit-animation:Font 15s
      infinite alternate;
      @-webkit-keyframes Font{
